# libShellAudio

./: CMakeLists.txt  Makefile  README.md  libShellAudio.sln
ShellAudio_module/: CMakeLists.txt  exports.yml  main.c
include/: ShellAudio.h
libShellAudio/: libShellAudio.vcxproj  libShellAudio.vcxproj.filters
libShellAudio/include/: ShellAudio.h
libShellAudio/source/: ShellAudio.c
source/: ShellAudio.c
